<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="20sp"
    android:paddingEnd="20sp">

    <TextView
        android:id="@+id/dg_star_delete_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_name"
        android:textSize="18dp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/dg_star_delete_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_delete_confirm"
        android:textSize="10dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok_delete_star"
            android:layout_height="20dp"
            android:layout_width="wrap_content"
            android:text="@string/delete_star"
            android:layout_weight="1"
            style="@style/btnStyle"/>

        <Button
            android:id="@+id/cancel"
            android:layout_height="20dp"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            style="@style/btnStyle"/>

    </LinearLayout>

</LinearLayout>